Avoid layout shifting on selection
Always add a consistent border to the panel item, so there is no obvious
layout shifting when panel items are selected. The border will be
transparent when the item is not selected.

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -97,6 +97,8 @@
     -fx-label-padding: 0 0 0 0;
     -fx-graphic-text-gap : 0;
     -fx-background-radius: 15;
+    -fx-border-color: transparent;
+    -fx-border-width: 1;
 }
 
 .list-cell:filled:even {
